<resources>
    <string name="app_name">Fishify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_listPeternakan">List Peternakan</string>
    <string name="main_listIkanTernak">List Ikan Ternak</string>
    <string name="main_detailPeternakan">Detail Peternakan</string>

    <string name="navigation_listPeternakan">List Peternakan</string>
    <string name="navigation_listIkanTernak">List Ikan Ternak</string>
    <string name="navigation_keluar">Keluar</string>

    <string name="daftarPeternakan_tidakAdaPeternakan">Tidak ada peternakan yang terdaftar, silahkan tambah peternakan anda terlebih dahulu.</string>

    <string name="detailPeternakan_daftarIkan">Daftar Ikan</string>
    <string name="detailPeternakan_tidakAdaIkan">Tidak ada ikan yang terdaftar, silahkan tambah ikan ternak anda terlebih dahulu.</string>


    <string name="menu_tambahPeternakan">Tambah Peternakan</string>
    <string name="menu_simpan">Simpan</string>
    <string name="menu_batal">Batal</string>
    <string name="menu_rubah">Rubah</string>
    <string name="menu_hapus">Hapus</string>

    <string name="motto">Partnermu saat beternak ikan.</string>
    <string name="text_register">Register</string>
    
    <string name="hint_namaLengkap">Nama Lengkap</string>
    <string name="hint_jenisKelamin">Jenis Kelamin</string>
    <string name="hint_tanggalLahir">Tanggal Lahir</string>
    <string name="hint_email">Email</string>

    <string name="hint_namaPeternakan">Nama Peternakan</string>
    <string name="hint_panjangPeternakan">Panjang Peternakan</string>
    <string name="hint_lebarPeternakan">Lebar Peternakan</string>

    <string name="hint_namaIkan">Nama Ikan</string>
    <string name="hint_jenisIkan">Jenis Ikan</string>

    <string name="jenis_laki">Laki-laki</string>
    <string name="jenis_perempuan">Perempuan</string>

    <string name="main_tambahPeternakan">Tambah Peternakan</string>
    <string name="main_rubahPeternakan">Rubah Peternakan</string>
    <string name="main_tambahIkanTernak">Tambah Ikan Ternak</string>
    <string name="main_rubahIkanTernak">Rubah Peternakan</string>

    <string name="hint_meter">meter</string>

    <string name="error_emptyField">Field tidak boleh kosong.</string>
    <string name="error_invalidEmail">Format Email tidak valid.</string>
    <string name="error_numberError">Angka harus diatas 0.</string>
    <string name="error_parameterInvalid">Parameter yang dikirim tidak lengkap.</string>

    <string name="message_successInsert">Berhasil memasukkan data.</string>
    <string name="message_successUpdate">Berhasil memperbaruhi data.</string>
    <string name="message_hapusPeternakan">Hapus Peternakan</string>
    <string name="message_hapusPeternakanBody">Menghapus peternakan ini juga akan menghapus data ikan yang ada didalamnya. Anda yakin ingin melanjutkan?</string>

    <string name="message_hapusIkanTernak">Hapus Ikan Ternak</string>
    <string name="message_hapusIkanTernakBody">Anda yakin ingin melanjutkan?</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Batal</string>

    <string name="button_ambilGambar">Ambil Gambar</string>
</resources>
