<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/tambahRubahIkanTernak_foto"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:scaleType="centerCrop"
            android:src="@drawable/camera"/>

        <Button
            android:id="@+id/tambahRubahIkanTernak_ambilGambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ambilGambar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hint_namaIkan"
            android:textColor="@color/colorSecondaryText" />

        <EditText
            android:id="@+id/tambahRubahIkanTernak_namaIkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_jenisIkan"
            android:textColor="@color/colorSecondaryText" />

        <EditText
            android:id="@+id/tambahRubahIkanTernak_jenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:inputType="textMultiLine"
            android:padding="8dp" />


    </LinearLayout>

</LinearLayout>