<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/hint_namaPeternakan"/>
        <EditText
            android:id="@+id/tambahRubah_namaPeternakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/hint_panjangPeternakan"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:weightSum="1">
            <EditText
                android:id="@+id/tambahRubah_panjangPeternakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="8dp"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/hint_meter"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/hint_lebarPeternakan"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:weightSum="1">
            <EditText
                android:id="@+id/tambahRubah_lebarPeternakan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="8dp"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/hint_meter"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>